--- a/12 - Key Sequence Detection/index-START.html
+++ b/12 - Key Sequence Detection/index-START.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Key Detection</title>
   <script type="text/javascript" src="https://www.cornify.com/js/cornify.js"></script>
 </head>
+
 <body>
-<script>
-</script>
+  <script>
+    const enterseq = [];
+    const password = ['a', 'b', 'c'];
+    const passphrase = JSON.stringify(password);
+    window.addEventListener('keyup', (e) => {
+      console.log(e.key);
+      enterseq.push(e.key);
+      if (enterseq.length > 2) {
+        console.log(enterseq.slice(1).slice(-password.length));
+        let a = JSON.stringify(enterseq.slice(1).slice(-password.length));
+        if (a === passphrase) {
+          console.log("Yeh Man");
+        };
+      };
+    });
+  </script>
 </body>
+
 </html>
